# embassy-example

./: Cargo.toml  rust-toolchain.toml
src/: main.rs
