[package]
name = "embassy-example"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = {version = "0.5.0", features =  ["defmt", "time-driver-any", "stm32g474re", "memory-x", "unstable-pac", "exti", "single-bank"]}
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/stm32g4" }
]